# rmrl-cli

./: pyproject.toml
rmrl_cli/: cli.py
tests/: test_rmrl_cli.py
