[tool.poetry]
name = "rmrl-cli"
version = "0.1.0"
description = ""
authors = ["Jasper Chan <jasperchan515@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rmrl = { git = "https://github.com/Gigahawk/rmrl.git", rev = "c2d57d2" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
